unpackaged/main/default/objects/pse__Expense_Report__c/fields/Expense_Bgt_Remaining_from_Previous_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Expense_Bgt_Remaining_from_Previous_Rpt__c</fullName>
    <formula>pse__Project__r.pse__Expense_Budget__c - pse__Project__r.pse__Expense_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Bgt Remaining from Previous Rpt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>