unpackaged/main/default/objects/pse__Expense_Report__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>IT3032999: Field maps to Project Owner</description>
    <formula>pse__Project__r.Owner:User.FirstName + " " + pse__Project__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Owner</inlineHelpText>
    <label>Owner</label>
    <type>Text</type>
</CustomField>