unpackaged/main/default/objects/pse__Expense_Report__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>