unpackaged/main/default/objects/pse__Expense_Report__c/fields/Reimbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Date__c</fullName>
    <label>Reimbursement Date</label>
    <type>Date</type>
</CustomField>