unpackaged/main/default/objects/pse__Expense_Report__c/listViews/Approved_Expense_Reports_AR.listView-meta.xml
<ListView>
    <fullName>Approved_Expense_Reports_AR</fullName>
    <columns>NAME</columns>
    <columns>pse__First_Expense_Date__c</columns>
    <columns>pse__Last_Expense_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Total_Billable_Amount__c</columns>
    <columns>pse__Total_Non_Billable_Amount__c</columns>
    <columns>pse__Total_Reimbursement_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Approved Expense Reports (AR)</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Consulting_Mgmt_APAC</group>
        <group>PSA_Consulting_Mgmt_APCJ</group>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Consulting_Mgmt_JAPAN</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_APAC</group>
        <group>PSA_Project_Mgmt_APCJ</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_JAPAN</group>
    </sharedTo>
</ListView>