unpackaged/main/default/objects/pse__Expense_Report__c/listViews/Approved_Expenses_AMER_not_released1.listView-meta.xml
<ListView>
    <fullName>Approved_Expenses_AMER_not_released1</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
    <columns>pse__Assignment__c</columns>
    <columns>NAME</columns>
    <columns>pse__Total_Billable_Amount__c</columns>
    <columns>Theater__c</columns>
    <columns>PS_Consulting_Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Owner__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Invoiced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Billed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Theater__c</field>
        <operation>contains</operation>
        <value>Americas</value>
    </filters>
    <label>Approved Expenses (AMER not released)</label>
    <language>en_US</language>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_Project_Mgmt_AMER</group>
    </sharedTo>
</ListView>