unpackaged/main/default/objects/pse__Expense_Report__c/listViews/Submitted_Expense_Reports.listView-meta.xml
<ListView>
    <fullName>Submitted_Expense_Reports</fullName>
    <columns>NAME</columns>
    <columns>pse__First_Expense_Date__c</columns>
    <columns>pse__Last_Expense_Date__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Total_Billable_Amount__c</columns>
    <columns>pse__Total_Non_Billable_Amount__c</columns>
    <columns>pse__Total_Reimbursement_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted Expense Reports</label>
</ListView>